--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         </div>
         <!-- <span class="spacer"></span> -->
         <div class="control-container">
+          <a class="header-btn" href="task-list/tasks.html">
+            Задачи
+          </a>
           <a class="header-btn">
             Личный кабинет
           </a>
@@ -29,7 +32,7 @@
     </header>
     <main>
       <div class="container">
-
+        
       </div>
     </main>
     <div class="footer">
