--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
     <header>
       <div class="header">
         <div class="logo-container">
-          <a href="file:///C:/Users/%D0%98%D0%BB%D1%8C%D1%8F/AppData/Local/Programs/Algoritmika/vscode/data/extensions/algoritmika.algopython-20230619.155754.0/data/student/2239473/Project_Frontend/index.html" class="button"><img id="company-logo" src="https://raw.githubusercontent.com/Gordei20/task-Manager/feature/src/clipart900434.png"></a>
+          <a href="../index.html" class="button"><img id="company-logo" src="https://raw.githubusercontent.com/Gordei20/task-Manager/feature/src/clipart900434.png"></a>
           <span id="company-name">
-            <a href="file:///C:/Users/%D0%98%D0%BB%D1%8C%D1%8F/AppData/Local/Programs/Algoritmika/vscode/data/extensions/algoritmika.algopython-20230619.155754.0/data/student/2239473/Project_Frontend/index.html" class="button">ПЛАНИРОВЩИК++</a>
+            <a href="../index.html" class="button">ПЛАНИРОВЩИК++</a>
           </span>
         </div>
         <!-- <span class="spacer"></span> -->
         <div class="control-container">
-          <a class="header-btn" href="task-list/tasks.html">
-            Задачи
-          </a>
           <a class="header-btn">
             Личный кабинет
           </a>
@@ -32,12 +29,12 @@
     </header>
     <main>
       <div class="container">
-        
+       
       </div>
     </main>
     <div class="footer">
       <p>
-        Спасибо что пользуетесь нашим сайтом!<a href="file:///C:/Users/%D0%98%D0%BB%D1%8C%D1%8F/AppData/Local/Programs/Algoritmika/vscode/data/extensions/algoritmika.algopython-20230619.155754.0/data/student/2239473/Project_Frontend/donate/donats.html" class="button"> Поддержать нас.</a>
+        Спасибо что пользуетесь нашим сайтом!<a href="donate/donats.html" class="button"> Поддержать нас.</a>
       </p>
     </div>
   </body>
