--- a/task-list/tasks.html
+++ b/task-list/tasks.html
@@ -8,9 +8,9 @@
     <header>
       <div class="header">
         <div class="logo-container">
-          <a href="../index.html" class="button"><img id="company-logo" src="https://raw.githubusercontent.com/Gordei20/task-Manager/feature/src/clipart900434.png"></a>
+          <img id="company-logo" src="../src/clipart900434.png">
           <span id="company-name">
-            <a href="../index.html" class="button">ПЛАНИРОВЩИК++</a>
+            ПЛАНИРОВЩИК++
           </span>
         </div>
         <!-- <span class="spacer"></span> -->
@@ -29,16 +29,12 @@
     </header>
     <main>
       <div class="container">
-        <h1>
-            Поддержите наших разработчиков
-            <h1> Номер карты: 0123 4567 8910 1112
-                <h1> Номер телефона: 8 (800) 555-35-35
-        </h1>
+        <p>ЗДЕСЬ СПИСОК ЗАДАЧ</p>
       </div>
     </main>
     <div class="footer">
       <p>
-        Спасибо что пользуетесь нашим сайтом!<a href="#" class="button"> Поддержать нас.</a>
+        Спасибо что пользуетесь нашим сайтом!
       </p>
     </div>
   </body>
