--- a/task-list/tasks.html
+++ b/task-list/tasks.html
@@ -34,7 +34,7 @@
     </main>
     <div class="footer">
       <p>
-        Спасибо что пользуетесь нашим сайтом!
+        Спасибо что пользуетесь нашим сайтом!<a href="donate/donats.html" class="button"> Поддержать нас.</a> Почта для связи с нами: svyaz231@gmail.com
       </p>
     </div>
   </body>
