--- a/task-list/tasks.html
+++ b/task-list/tasks.html
@@ -8,9 +8,9 @@
     <header>
       <div class="header">
         <div class="logo-container">
-          <img id="company-logo" src="../src/clipart900434.png">
+          <a href="../index.html" class="button"><img id="company-logo" src="https://raw.githubusercontent.com/Gordei20/task-Manager/feature/src/clipart900434.png"></a>
           <span id="company-name">
-            ПЛАНИРОВЩИК++
+            <a href="../index.html" class="button">ПЛАНИРОВЩИК++</a>
           </span>
         </div>
         <!-- <span class="spacer"></span> -->
