--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </main>
     <div class="footer">
       <p>
-        Спасибо что пользуетесь нашим сайтом!<a href="../donats.html" class="button"> Поддержать нас.</a>
+        Спасибо что пользуетесь нашим сайтом!<a href="donate/donats.html" class="button"> Поддержать нас.</a>
       </p>
     </div>
   </body>
