--- a/rokhmanenko/ndx.html
+++ b/rokhmanenko/ndx.html
@@ -3,14 +3,15 @@
   <head>
     <title>Task-Manager</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
       <div class="header">
         <div class="logo-container">
-          <img id="company-logo" src="src/clipart900434.png">
+          <a href="../index.html" class="button"><img id="company-logo" src="https://raw.githubusercontent.com/Gordei20/task-Manager/feature/src/clipart900434.png"></a>
           <span id="company-name">
-            ПЛАНИРОВЩИК++
+            <a href="../index.html" class="button">ПЛАНИРОВЩИК++</a>
           </span>
         </div>
         <!-- <span class="spacer"></span> -->
@@ -29,12 +30,12 @@
     </header>
     <main>
       <div class="container">
-        
+       
       </div>
     </main>
     <div class="footer">
       <p>
-        Спасибо что пользуетесь нашим сайтом!
+        Спасибо что пользуетесь нашим сайтом!<a href="donate/donats.html" class="button"> Поддержать нас.</a> Почта для связи с нами: svyaz231@gmail.com
       </p>
     </div>
   </body>
