--- a/index.html
+++ b/index.html
@@ -29,16 +29,12 @@
     </header>
     <main>
       <div class="container">
-        <h1>
-            Поддержите наших разработчиков
-            <h1> Номер карты: 0123 4567 8910 1112
-                <h1> Номер телефона: 8 (800) 555-35-35
-        </h1>
+       
       </div>
     </main>
     <div class="footer">
       <p>
-        Спасибо что пользуетесь нашим сайтом!<a href="donate/donats.html" class="button"> Поддержать нас.</a>
+        Спасибо что пользуетесь нашим сайтом!<a href="donate/donats.html" class="button"> Поддержать нас.</a> Почта для связи с нами: svyaz231@gmail.com
       </p>
     </div>
   </body>
